resources/assets/sass/app.css
/* ... */
.el-select__footer:hover {
    background-color: #55588b !important;
}

.el-select__footer:hover span {
    color: white !important;
}

.el-select__footer span {
    width: auto;
    padding: 0 !important
}

.el-select__footer span:hover {
    background-color: transparent;
}

.el-select-dropdown__list {
    padding: 8px 0 8px 0;
}

.el-select .el-select__tags {
    top: 54%;
}

/* Country select with flag icon: offset tags to avoid overlap with flag */
.el-select-tags-pl-38 .el-select__tags {
    padding-left: 38px;
}

html[dir="rtl"] .el-select-tags-pl-38 .el-select__tags {
    padding-left: 0;
    padding-right: 38px;
}

.el-select .el-select__tags .el-tag {
    @apply bg-purple text-white;
}

.el-select .el-tag__close.el-icon-close {
    @apply bg-transparent text-white;
}

.el-tag.el-tag--info .el-tag__close:hover {
    @apply bg-transparent;
}

.is-focus .el-select__caret {
    transform: rotateZ(0) !important;
}

.el-input.el-input--prefix.el-input--suffix .el-select__caret.el-input__icon.el-icon-:before {
    content: "\e6e1";
}

.no-arrow .el-select__caret {
    display: none;
}

.el-input .el-icon-circle-close {
    transform: unset !important;
    transition: unset !important;
    margin-top: 3px;
}

.el-date-editor input {
    @apply w-full text-sm px-3 py-2.5 mt-1 rounded-lg border border-light-gray text-black placeholder-light-gray bg-white disabled:bg-gray-200 focus:outline-none focus:ring-transparent focus:border-purple;
    color: #595959 !important;
}

.el-date-editor .el-input__prefix {
    top: 3px;
    color: #595959;
}

html[dir="ltr"] .el-date-editor .el-input__prefix {
    left: 0;
}

html[dir="rtl"] .el-date-editor .el-input__prefix {
    right: 0;
}

.recurring-invoice-data {
    width: 9rem !important;
}

.recurring-invoice-data input {
    padding: 0 25px !important;
}

.el-color-picker__color {
    margin-top: 13px !important;
}

.el-color-picker--mini .el-color-picker__trigger {
    height: 48px !important;
}

.dashboard-picker.el-date-range-picker.el-popper.has-sidebar {
    width: 900px !important;
}

.dashboard-picker .el-picker-panel__sidebar {
    width: 200px !important;
}

html[dir="ltr"] .el-picker-panel__sidebar {
    padding-left: 12px;
}

html[dir="rtl"] .el-picker-panel__sidebar {
    padding-right: 12px;
    right: 0;
}

html[dir="ltr"] .dashboard-picker .el-picker-panel__body {
    width: 700px !important;
    margin-left: 200px !important;
}

html[dir="rtl"] .dashboard-picker .el-picker-panel__body {
    width: 700px !important;
    margin-right: 200px !important;
}

.el-input__suffix[style*="direction:rtl"] {
    left: 0;
    right: unset !important;
}

.flatpickr-day.selected, .flatpickr-day.startRange, .flatpickr-day.endRange, .flatpickr-day.selected.inRange, .flatpickr-day.startRange.inRange, .flatpickr-day.endRange.inRange, .flatpickr-day.selected:focus, .flatpickr-day.startRange:focus, .flatpickr-day.endRange:focus, .flatpickr-day.selected:hover, .flatpickr-day.startRange:hover, .flatpickr-day.endRange:hover, .flatpickr-day.selected.prevMonthDay, .flatpickr-day.startRange.prevMonthDay, .flatpickr-day.endRange.prevMonthDay, .flatpickr-day.selected.nextMonthDay, .flatpickr-day.startRange.nextMonthDay, .flatpickr-day.endRange.nextMonthDay {
    background: #55588B !important;
    border-color: #55588B !important;
}

.flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n+1)), .flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n+1)), .flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n+1)) {
    -webkit-box-shadow: -10px 0 0 #888aae !important;
    box-shadow: -10px 0 0 #888aae !important;
}

html[dir="rtl"] .flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n+1)),
html[dir="rtl"] .flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n+1)),
html[dir="rtl"] .flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n+1)) {
    -webkit-box-shadow: 10px 0 0 #888aae !important;
    box-shadow: 10px 0 0 #888aae !important;
}

.el-date-editor .el-range-input, .el-date-editor .el-range-input::placeholder {
    color: #424242;
}

.el-picker-panel__shortcut {
    width: auto;
    line-height: 20px;
    border-bottom: 1px solid transparent;
    padding-left: 0;
    margin-bottom: 3px;
}

html[dir="rtl"] .el-picker-panel__shortcut {
    padding-left: revert;
    padding-right: 0;
}

.el-picker-panel__shortcut:hover {
    color: #000000 !important;
    border-bottom: 1px solid black;
    transition: all 0.2s ease-in;
}

html[dir="rtl"] .el-input__suffix {
    left: 5px;
    right: unset;
    text-align: left;
}

html[dir="rtl"] .el-scrollbar__wrap {
    margin-left: -15px !important;
    margin-right: unset !important;
}

html[dir="ltr"] .el-select-dropdown.is-multiple .el-select-dropdown__item.selected::after {
    right: 15px !important;
}

html[dir="rtl"] .el-select-dropdown.is-multiple .el-select-dropdown__item.selected::after {
    left: 15px !important;
}

.el-select-dropdown.is-multiple .el-select-dropdown__item.selected.hover {
    background-color: transparent;
}

@media only screen and (max-width: 480px) {
    .el-range-editor.el-input__inner {
        width: 100%;
    }

    /* apex-chart cash-flow */
    .apex-chart-cash-flow .apexcharts-legend {
        width: 100% !important;
        justify-content: space-around !important;
        padding: 0;
        flex-wrap: nowrap !important;
    }

    .apex-chart-cash-flow .apexcharts-legend-series {
        width: 8rem;
        text-align: center;
        margin: 0 !important;
    }

    .apex-chart-cash-flow  .apexcharts-toolbar {
        top: 45px !important;
    }
    /* apex-chart cash-flow */
}
/* element-ui */

/* apex-chart */
.apexcharts-donut-custom span.apexcharts-legend-text {
    display: -webkit-box !important;
    -webkit-line-clamp: 1 !important;
    -webkit-box-orient: vertical !important;
    overflow: hidden !important;
    height: 1rem !important;
}
/* ... */

